[package]
name = "doggo"
description = "Command line tool to evaluate the goodness of a doggo"
version = "0.1.0"
authors = ["Vanessa McHale <tmchale@wisc.edu>"]
license-file = "LICENSE"
exclude = [ ".gitignore" ]
readme = "README.md"

[dependencies]
clap = { version = "2.20.4" , features = ["yaml"] }
rand = "0.3.0"
